# hiop

./: CMakeLists.txt  README.md
cmake/: FindHiopHipLibraries.cmake
scripts/: ascentVariables.sh  defaultBuild.sh  marianasVariables.sh  newellVariables.sh
src/Drivers/: CMakeLists.txt  nlpMDSForm_raja_ex4.cpp  nlpSparse_ex6_driver.cpp  nlpSparse_ex6_raja.cpp  nlpSparse_ex6_raja.hpp  nlpSparse_ex6_raja_driver.cpp
src/Interface/: hiop_defs.hpp.in
src/LinAlg/: CMakeLists.txt  hiopLinSolver.cpp  hiopLinSolver.hpp  hiopLinSolverIndefSparseMA57.cpp  hiopLinSolverSparseSTRUMPACK.cpp  hiopMatrixRajaDense.cpp  hiopMatrixRajaSparseTriplet.cpp  hiopMatrixSparse.hpp  hiopMatrixSparseTriplet.cpp  hiopMatrixSparseTriplet.hpp  hiopVector.hpp  hiopVectorPar.cpp  hiopVectorPar.hpp  hiopVectorRajaPar.cpp  hiopVectorRajaPar.hpp
src/Optimization/: hiopAlgFilterIPM.cpp  hiopIterate.cpp  hiopIterate.hpp  hiopKKTLinSysSparse.cpp  hiopNlpFormulation.cpp  hiopNlpFormulation.hpp  hiopNlpTransforms.cpp  hiopNlpTransforms.hpp
src/Utils/: hiopCSR_IO.hpp
tests/: CMakeLists.txt  testMatrixSparse.cpp
tests/LinAlg/: matrixTestsSparse.hpp  matrixTestsSparseTriplet.cpp  matrixTestsSparseTriplet.hpp
